hard-gists/3699110/run.log
=== Docker Run Log for 3699110 ===
Started at: Mi 29. Okt 13:57:04 CET 2025

[2025-10-29 13:57:05] START: Running container for 3699110
[2025-10-29 13:57:05] SUCCESS: Container 32c238030d40e2aecfaf0f9a8e520d2cc295999a5b4f7555395211ed29458c00 started for 3699110
=== Container logs for 3699110 ===
  File "/snippet.py", line 21
    print local_path, 'saved to', path
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3699110 ===
[2025-10-29 13:57:07] INFO: Container 32c238030d40e2aecfaf0f9a8e520d2cc295999a5b4f7555395211ed29458c00 has stopped
